# TrinityCore

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG-custom.md  CLAUDE.md  CONTENT-NOTES.md  README.md  SETUP-NOTES.md  docker-compose.yml  tc
.superpowers/sdd/: progress.md  task-1-brief.md  task-1-report.md
client-addons/TCAdmin/: Commands.lua  Core.lua  README.md  TCAdmin.toc  UI.lua
docker/authserver/: entrypoint.sh
docker/bnetserver/: entrypoint.sh
docker/common/: entrypoint-lib.sh
docker/debug/: Dockerfile
docker/mysql/init/: 01-create-databases.sh
docker/trinitycore/: Dockerfile
docker/worldserver/: entrypoint.sh
docs/: bot-ux-future-milestones.md  trinitycore-audit-spell-and-ai-integrity.md
docs/superpowers/plans/: 2026-06-20-companion-cohorts.md  2026-06-21-bot-lowlevel-rotations.md  2026-06-24-condition-aware-bot-rotation.md  2026-06-25-bot-ranged-auto-attack.md  2026-06-25-bot-ranged-positioning-formation.md  2026-06-25-quiet-bot-socket-logging.md  2026-06-26-bot-formation-engine.md  2026-06-26-bot-hunter-pets.md
docs/superpowers/specs/: 2026-06-20-companion-cohorts-design.md  2026-06-20-death-qol-design.md  (+8 more)
overlay/: README.md  apply-overlay.sh  apply_core_patches.py
scripts/: extract-client-data.sh  process-worldserver-crashes.ps1  register-crash-task.ps1  run-crash-hidden.vbs
sql/custom/: spike_assisted_combat_hunter_lowlevel.sql  world_player_classlevelstats_stamina_retail.sql
tests/: CMakeLists.txt
tests/game/: BotCohortPolicy.cpp  BotCombatPolicy.cpp  BotFormationPolicy.cpp  BotMovementPolicy.cpp  BotPetPolicy.cpp  BotRangedAttackPolicy.cpp  BotRotationPolicy.cpp  CollectionMgr.cpp  DeathRevivePolicy.cpp  TirisfalRecruitment.cpp
(+75 files in other folders)
